@@ -1,3 +1,12 @@
+2023-11-11T08:10:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6833069501 # 1333
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
+* notice: last 14d: unq all: 3 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 703 1107 / 723 1141
+* notice: next accum: outdated-unq outdated-all / unq all: 703 1107 / 724 1142
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-28 2023-11-11]
+
 2023-11-11T00:41:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6831041785 # 1332
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
